# r4w

./: .gitignore  CLAUDE.md  OVERVIEW.md  requirements.yaml
crates/r4w-cli/: Cargo.toml
crates/r4w-cli/src/: main.rs
crates/r4w-core/src/: lib.rs
crates/r4w-core/src/mesh/: crypto.rs  lora_mesh.rs  mac.rs  meshtastic.rs  mod.rs  neighbor.rs  packet.rs  routing.rs  simulation.rs  telemetry.rs  traceroute.rs  traits.rs
crates/r4w-core/src/waveform/: adsb.rs  ppm.rs
crates/r4w-gui/src/: app.rs
crates/r4w-gui/src/views/: mesh_network.rs  mod.rs
crates/r4w-sandbox/: Cargo.toml
crates/r4w-sandbox/examples/: wasm_benchmark.rs
crates/r4w-sandbox/src/: error.rs  lib.rs
crates/r4w-sandbox/src/levels/: mod.rs  sandbox.rs
crates/r4w-sandbox/src/wasm/: config.rs  host_functions.rs  mod.rs  runtime.rs  tests.rs
crates/r4w-sandbox/tests/: r4w_wasm_test_waveform.wasm  wasm_waveform_test.rs
crates/r4w-wasm-test-waveform/: Cargo.toml
crates/r4w-wasm-test-waveform/src/: lib.rs
docs/: ISOLATION_GUIDE.md
docs/slides/: 06_fpga_acceleration.html  07_security_isolation.html  09_realtime_systems.html  10_workshop_series.html
